--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ font-style: italic;
 
 	.large_text{
 		list-style:none;
-		font-size:15px;
+		font-size:2rem;
 		font-family: 'Zen Kurenaido', sans-serif;
 		text-align:center;
 		color:#436572;
@@ -717,6 +717,6 @@ font-style: italic;
 		}
 		.large_text{
 	
-		font-size:35px;
+		font-size:3rem;
 		}
 	}
