--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ font-style: italic;
 
 	.large_text{
 		list-style:none;
-		font-size:1.75rem;
+		font-size:15px;
 		font-family: 'Zen Kurenaido', sans-serif;
 		text-align:center;
 		color:#436572;
@@ -716,6 +716,6 @@ font-style: italic;
 			padding: 0;
 		}
 		.large_text{
-		font-size:115%;
+		font-size:35px;
 		}
 	}
